--- a/STYLES/style.css
+++ b/STYLES/style.css
@@ -4,3 +4,45 @@
     box-sizing: border-box;
 }
 
+main{
+    min-height: 100vh;
+    background: linear-gradient(to right top, #583434, #2b0101);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.glass {
+    background: white;
+    min-height: 80vh;
+    width: 60%;
+    background: linear-gradient(to right bottom, rgba(255,255,255, 0.7), rgba(255,255,255, 0.3));
+    border-radius: 1%;
+    z-index: 2;
+    backdrop-filter: blur(2rem);
+}
+
+.circle1, .circle2 {
+    background: white;
+    background: linear-gradient(to right bottom, rgba(255,255,255, 0.8), rgba(255,255,255, 0.3));
+    border-radius: 1%;
+    height: 20rem;
+    width: 20rem;
+    position: absolute;
+    
+}
+
+.circle1 {
+    top: 5%;
+    right: 15%;
+    background: rgb(161, 37, 37);
+}
+
+.circle2 {
+    bottom: 5%;
+    left: 10%;
+}
+
+.ivote {
+    width: 100px;
+}
